@@ -365,7 +365,8 @@ Many git-annex commands will stage changes for later `git commit` by you.
 
   Overrides trust settings for a repository. May be specified more than once.
   
-  The repository should be specified using the name of a configured remote.
+  The repository should be specified using the name of a configured remote,
+  or the UUID or description of a repository.
 
 * --backend=name
 
